# FHoSP

./: .gitmodules  CMakeLists.txt  README.md  hashes_paper.h  indexing.cpp  macros.h  main.cpp  nesting.cpp  printing.cpp
serializers/commons/: structure.h
serializers/commons/secondary_memory/: vertex_id_index.h
serializers/commons/secondary_memory/utils/: GraphCollectionMapper.h
serializers_old/commons/: Serialize.cpp  Serialize.h
serializers_old/commons/secondary_memory/: header.h
serializers_old/commons/secondary_memory/utils/: Graph.h
