cmake_minimum_required(VERSION 3.10)
project(simplified_qoppa)
#set(CMAKE_CXX_FLAGS_DEBUG "-O2")
#set(CMAKE_CXX_FLAGS_RELEASE "-O2")
include_directories(dependencies/graphnestingc)
include_directories(dependencies/CRoaring)
set(CMAKE_CXX_STANDARD 11)
add_executable(loading main.cpp dependencies/graphnestingc/serializers/commons/Serialize.cpp dependencies/graphnestingc/serializers/commons/primary_memory/entity_relationship.cpp dependencies/graphnestingc/serializers/commons/secondary_memory/primary_index.cpp)
add_executable(running    nesting.cpp dependencies/graphnestingc/serializers/utils/mmapFile.cpp hashes_paper.h macros.h)
target_link_libraries(running roaring)
add_executable(printing printing.cpp)
add_executable(indexing indexing.cpp)